✏️ /caseのGET,DELETEに種別と正当な事例かどうかを識別するキーを設定
